feat: Add live feed and update navigation
Introduces a new 'livefeed' view to the application, allowing users to see real-time updates and events. This also includes an addition to the main navigation for the new view.

Additionally, mock data for transactions has been expanded to include 'transfer' types and associated sender/recipient information, enhancing the simulation of financial operations. Minor styling adjustments have been made to cards for improved aesthetics and performance.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.1",
     "@google/genai": "^1.14.0",
     "lucide-react": "^0.539.0",
-    "html-to-image": "^1.11.11"
+    "html-to-image": "^1.11.11",
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
