--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "lucide-react": "^0.539.0",
-    "html-to-image": "^1.11.11",
-    "react-qr-code": "^2.0.12"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "lucide-react": "0.539.0",
+    "html-to-image": "1.11.11",
+    "react-qr-code": "2.0.12"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
