--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-mlm-matrix-project",
+  "name": "realty-guilds",
   "private": true,
   "version": "0.0.0",
   "type": "module",
