feat: Introduce Recharts and enhance UX
Adds Recharts for improved data visualization capabilities.
Introduces new `accent-gold` color for enhanced UI theming.
Updates types and constants to support new features and existing ones.
Adds `AssistantWidget` and `TheBoardroomView` components, hinting at future functionality.
Removes unused `MarketingGenius` import.
Refactors FAQ data for better organization and clarity.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "18.3.1",
     "lucide-react": "0.539.0",
     "html-to-image": "1.11.11",
-    "react-qr-code": "2.0.12"
+    "react-qr-code": "2.0.12",
+    "recharts": "2.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
