--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "0.539.0",
     "html-to-image": "1.11.11",
     "react-qr-code": "2.0.12",
-    "recharts": "2.12.7"
+    "recharts": "2.12.7",
+    "axios": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
