--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "6.25.1",
     "lucide-react": "0.539.0",
     "html-to-image": "1.11.11",
     "react-qr-code": "2.0.12",
